--- a/html/contato.html
+++ b/html/contato.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="../layout/css/contato.css">
 		<link rel="icon" type="image/png" href="../layout/img/index/unaerp_icon.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script data-account="a9kaaJFEQW" src="https://cdn.userway.org/widget.js"></script>
 
 		<style type="text/css">
 			@media (max-width: 780px) {
