--- a/html/index.html
+++ b/html/index.html
@@ -1043,16 +1043,21 @@
 					<h3 id="criacao">PROJETIFICAÇÃO E CRIAÇÃO</h3>
 					<ul>
 						<li>
-							<p>Luiz Ricardo Monti Vieira Filho</p>
-						</li>
-						<li>
-							<p>Edson da Silva Leite Júnior</p>
-						</li>
-						<li>
 							<p>Leonardo de Andrade Ferreira</p>
 						</li>
 						<li>
-							<p>Guilherme Carvalho de Faria Reis</p>
+							<p>APOIO:</p>
+							<ul>
+								<li>
+									<p>Luiz Ricardo Monti Vieira Filho</p>
+								</li>
+								<li>
+									<p>Edson da Silva Leite Júnior</p>
+								</li>
+								<li>
+									<p>Guilherme Carvalho de Faria Reis</p>
+								</li>
+							</ul>
 						</li>
 					</ul>
 
@@ -1082,6 +1087,9 @@
 					<ul>
 						<li>
 							<p>Edson da Silva Leite Júnior</p>
+						</li>
+						<li>
+							Leonardo de Andrade Ferreira
 						</li>
 						<li>
 							<p>Luiz Ricardo Monti Vieira Filho</p>
