--- a/html/index.html
+++ b/html/index.html
@@ -1089,7 +1089,7 @@
 							<p>Edson da Silva Leite Júnior</p>
 						</li>
 						<li>
-							Leonardo de Andrade Ferreira
+							<p>Leonardo de Andrade Ferreira</p>
 						</li>
 						<li>
 							<p>Luiz Ricardo Monti Vieira Filho</p>
