--- a/html/contato.html
+++ b/html/contato.html
@@ -240,7 +240,8 @@
 
 				<div class="paragrafo">
 					<h3>CAMPUS RIBEIRÃO PRETO</h3>
-
+					
+					<hr/>
 					<ul>
 						<li>
 							<p style="font-size: 21px;"><em><strong>FONE  </strong>.: 16 3603 7000 | 0800 771 8388</em></p>
@@ -257,11 +258,13 @@
 							</ul>
 						</li>
 					</ul>
+					<hr/>
 
 					<br/>
 
 					<h3>CAMPUS GUARUJÁ</h3>
 
+					<hr/>
 					<ul>
 						<li>
 							<p style="font-size: 21px;"><em><strong>FONE  </strong>.: 13 3398 1000 | 0800 773 7760</em></p>
@@ -278,6 +281,7 @@
 							</ul>
 						</li>
 					</ul>
+					<hr/>
 				</div>
 
 				<br/>
@@ -287,12 +291,14 @@
 				<div class="paragrafo">
 					<h3>EDILSON | COORDENADOR</h3>
 
+					<hr/>
 					<ul>
 						<li>
 							<p style="font-size: 21px;"><em><strong>FONE  </strong>.: 16 3603 6778</em></p>
 							<p style="font-size: 21px;"><em><strong>E-MAIL</strong>.: ecarita@unaerp.br</em></p>
 						</li>
 					</ul>
+					<hr/>
 				</div>
 
 				<br/>
@@ -300,11 +306,13 @@
 				<h2 class="subtitle">ATENDIMENTO ONLINE</h2>
 
 				<div class="paragrafo">
+					<hr/>
 					<ul>
 						<li>
 							<a href="https://www3.unaerp.br/Chat/#/identificacao" target="_blank"><p style="font-size: 21px;"><strong><em>CHAT UNAERP</em></strong></p></a>
 						</li>
 					</ul>
+					<hr/>
 				</div>
 
 				<br/><br/><br/>
@@ -340,7 +348,7 @@
 							<a href="https://www.facebook.com/universidadeunaerp/" target="_blank"><img class="img-footer-list-mini" src="../layout/img/index/facebook_logo_footer.png" alt="link facebook UNAERP"></a>
 							<a href="https://www.youtube.com/user/tvunaerp" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/youtube_logo_footer.png" alt="link canal TV UNAERP youtube"></a>
 							<a href="https://www.unaerp.br/" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/unaerp_logo_footer_site.png" alt="link site UNAERP"></a>
-							<a href="https://github.com/fresh-cappuccino/projeto-integrador" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
+							<a href="https://github.com/fresh-cappuccino/fresh-cappuccino.github.io" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
 
 							<hr class="row-hr">
 
