--- a/html/docentes.html
+++ b/html/docentes.html
@@ -433,17 +433,23 @@
 								<ul style="background-color: #DDDCD8;">
 									<li>
 										<p class="sub">Pesquisa e Pós-Graduação Stricto Sensu<br/></p>
+										<hr/>
 										<p>Profa. Neide Ap. de Souza Lehfeld</p>
+										<hr/>
 										<br/>
 									</li>
 									<li>
 										<p class="sub">Graduação e Pós-Graduação Lato Sensu</p>
+										<hr/>
 										<p>Profa. Sonia Maria Camargo dos Santos</p>
+										<hr/>
 										<br/>
 									</li>
 									<li>
 										<p class="sub">Extensão</p>
+										<hr/>
 										<p>Profa. Carmen Silvia Gonçalves Lopes</p>
+										<hr/>
 										<br/>
 									</li>
 								</ul>
@@ -453,39 +459,49 @@
 						<li>
 							<h3>Diretoria de Assuntos Comunitários e Estudantis - DACE</h3>
 							<div class="paragrafo">
+								<hr/>
 								<p>Carolina Bonini Ribeiro Porto</p>
-								<br/>
+								<hr/>
+								<br/><br/>
 							</div>
 							<br/>
 						</li>
 						<li>
 							<h3>Diretoria de Projetos Estratégicos - DIPRO</h3>
 							<div class="paragrafo">
+								<hr/>
 								<p>Vanessa França Bonini Panico</p>
-								<br/>
+								<hr/>
+								<br/><br/>
 							<br/>
 						</li>
 						<li>
 							<h3>Diretoria de Administração e Finanças - DAF</h3>
 							<div class="paragrafo">
+								<hr/>
 								<p>Alicia Maria Bonini Ribeiro</p>
-								<br/><br/><br/>
+								<hr/>
+								<br/><br/>
 							</div>
 							<br/>
 						</li>
 						<li>
 							<h3>Diretoria do Campus Guarujá</h3>
 							<div class="paragrafo">
+								<hr/>
 								<p>Profª. Priscilla Maria Bonini Ribeiro</p>
-								<br/>
+								<hr/>
+								<br/><br/>
 							</div>
 							<br/>
 						</li>
 						<li>
 							<h3>Coordenador do Curso</h3>
 							<div class="paragrafo">
+								<hr/>
 								<p>Prof. Dr. Edilson Carlos Caritá</p>
-								<br/><br/><br/>
+								<hr/>
+								<br/><br/>
 							</div>
 							<br/>
 						</li>
@@ -525,7 +541,7 @@
 							<a href="https://www.facebook.com/universidadeunaerp/" target="_blank"><img class="img-footer-list-mini" src="../layout/img/index/facebook_logo_footer.png" alt="link facebook UNAERP"></a>
 							<a href="https://www.youtube.com/user/tvunaerp" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/youtube_logo_footer.png" alt="link canal TV UNAERP youtube"></a>
 							<a href="https://www.unaerp.br/" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/unaerp_logo_footer_site.png" alt="link site UNAERP"></a>
-							<a href="https://github.com/fresh-cappuccino/projeto-integrador" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
+							<a href="https://github.com/fresh-cappuccino/fresh-cappuccino.github.io" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
 
 							<hr class="row-hr">
 
