--- a/html/eventos.html
+++ b/html/eventos.html
@@ -354,7 +354,7 @@
 							<a href="https://www.facebook.com/universidadeunaerp/" target="_blank"><img class="img-footer-list-mini" src="../layout/img/index/facebook_logo_footer.png" alt="link facebook UNAERP"></a>
 							<a href="https://www.youtube.com/user/tvunaerp" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/youtube_logo_footer.png" alt="link canal TV UNAERP youtube"></a>
 							<a href="https://www.unaerp.br/" target="_blank"><img class="img-footer-list-big" src="../layout/img/index/unaerp_logo_footer_site.png" alt="link site UNAERP"></a>
-							<a href="https://github.com/fresh-cappuccino/projeto-integrador" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
+							<a href="https://github.com/fresh-cappuccino/fresh-cappuccino.github.io" target="_blank"><img class="img-footer-list-medium" src="../layout/img/index/github_logo_footer.png" alt="link código do projeto github"></a>
 
 							<hr class="row-hr">
 
