--- a/html/docentes.html
+++ b/html/docentes.html
@@ -473,6 +473,7 @@
 								<p>Vanessa França Bonini Panico</p>
 								<hr/>
 								<br/><br/>
+							<div/>
 							<br/>
 						</li>
 						<li>
