--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Meu Redirect</title>
+    <title>Redirecting</title>
  
     <meta http-equiv="refresh" content="5; URL='https://www.homehost.com.br/'"/>
 </head>
