--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>Redirecting</title>
  
-    <meta http-equiv="refresh" content="5; URL='https://www.homehost.com.br/'"/>
+    <meta http-equiv="refresh" content="5; URL='/html"/>
 </head>
 <body>
     <div align=center>
