--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8"/>
     <title>Redirecting</title>
  
-    <meta http-equiv="refresh" content="5; URL='/html"/>
+    <meta http-equiv="refresh" content="0; URL='/html"/>
 </head>
 <body>
     <div align=center>
-        <h1>AGUARDE...</h1>
-        <h2>Você será redirecionado para a página em 5 segundos...</h2>
+        <h1>...REDIRECIONANDO...</h1>
+        <h2>...Você está sendo redirecionado para a página...</h2>
     </div>
 </body>
 </html>
