--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Redirecting</title>
- 
+    <link rel="stylesheet" href="../layout/css/index.css">
     <meta http-equiv="refresh" content="0; URL='/html"/>
 </head>
 <body>
